src/application-page/SideNavigationPageContainer.module.scss
@import '../breakpoints/media-queries';

:local {
  .side-nav-container {
    align-items: flex-start;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    height: 100%;
    justify-content: stretch;
    overflow: none;
  }

  .side-nav-sidebar {
    border-right: 1px solid grey;
    display: none;
    flex: 0 0 auto;
    height: 100%;
    width: 0;

    @include terra-mq-medium-up {
      display: block;
      width: 200px;
    }

  }

  .side-nav-is-open > .side-nav-sidebar {
    display: block;
    width: 100%;
    
    @include terra-mq-medium-up {
      width: 200px;
    }
  }

  .side-nav-body {
    flex: 1 1 auto;
    height: 100%;
  }

  .side-nav-is-open > .side-nav-body {
    display: none;

    @include terra-mq-medium-up {
      display: block;
    }
  }
}

